--- a/MVCBailieCubeApp/MVCBailieCubeApp/MVCBailieCubeApp.csproj
+++ b/MVCBailieCubeApp/MVCBailieCubeApp/MVCBailieCubeApp.csproj
@@ -202,6 +202,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Cards.cs" />
+    <Compile Include="Models\Cubes.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
