--- a/MVCBailieCubeApp/MVCBailieCubeApp/ApplicationInsights.config
+++ b/MVCBailieCubeApp/MVCBailieCubeApp/ApplicationInsights.config
@@ -2,8 +2,9 @@
 <ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
 	<TelemetryModules>
 		<Add Type="Microsoft.ApplicationInsights.DependencyCollector.DependencyTrackingTelemetryModule, Microsoft.AI.DependencyCollector"/>
-		<Add Type="Microsoft.ApplicationInsights.Extensibility.PerfCounterCollector.PerformanceCollectorModule, Microsoft.AI.PerfCounterCollector">
+		<Add Type="Microsoft.ApplicationInsights.Extensibility.PerfCounterCollector.PerformanceCollectorModule, Microsoft.AI.PerfCounterCollector"> 
 			<!--
+      Test Comment
       Use the following syntax here to collect additional performance counters:
       
       <Counters>
