I made a few changes. Updated Models to be Singular instead of Plural. This helps with conventions. Now the IDs work because the are <ModelName>ID. Then created the controllers which used scaffolding to create the views.

--- a/MVCBailieCubeApp/MVCBailieCubeApp/ApplicationInsights.config
+++ b/MVCBailieCubeApp/MVCBailieCubeApp/ApplicationInsights.config
@@ -4,7 +4,7 @@
 		<Add Type="Microsoft.ApplicationInsights.DependencyCollector.DependencyTrackingTelemetryModule, Microsoft.AI.DependencyCollector"/>
 		<Add Type="Microsoft.ApplicationInsights.Extensibility.PerfCounterCollector.PerformanceCollectorModule, Microsoft.AI.PerfCounterCollector"> 
 			<!--
-      Test Comment
+      Test Comment 2
       Use the following syntax here to collect additional performance counters:
       
       <Counters>
